Add POST /saveScanForElectronicJournal
